Version 2.2-2

o Added Effect.mer(), Effect.lme(), and Effect.gls() methods.

Version 2.2-1

o Some examples wrapped in \donttest{} to decrease package check time.

Version 2.2-0

o Introduced more flexible Effect() generic, along with Effect.lm() method for linear and generalized linear models.

o Default is now ask=FALSE for plot.efflist().

o globalVariables("wt") declared for R 2.15.1 and above.

o Small bug fixes.

Version 2.1-2

o Offsets for linear and generalized linear (and mixed) models are now supported.

o cbind(successes, failures) now supported for binomial generalized linear (and mixed) models.

Version 2.1-1

o plot.effpoly() now honors ylim argument when no confidence intervals are plotted (fixing problem reported by Achim Zeileis).

o safe predictions simplified in effect.lm(), producing correct results for mixed models (other methods to follow).

o plot.eff() now honors type argument.

o nlme and lme4 moved to Suggests.

o effect() now works when options(OutDec= ',') (suggestion of Guomundur Arnkelsson).


Version 2.1-0

o added support for 'mer' objects from lme4 and 'lme' objects from 'nlme'.  Added 'rotx', 'roty' and 'grid' arguments to the plot methods.

o See CHANGES file for changes to older versions.